fix long title text wrapping in editable-title component (#3638)
fix https://github.com/apache/incubator-superset/issues/3628

--- a/superset/assets/stylesheets/dashboard.css
+++ b/superset/assets/stylesheets/dashboard.css
@@ -90,6 +90,10 @@ div.widget .chart-controls {
   box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.2);
 }
 
+.slice-cell .editable-title input[type="button"] {
+  font-weight: bold;
+}
+
 .dashboard .separator.widget .slice_container {
   padding: 0px;
   overflow: visible;
